--- a/GlawnStyle.css
+++ b/GlawnStyle.css
@@ -4,23 +4,16 @@
 }
 
 .header {
-    height: 80px;
-    text-align: center;
-    color:#0ca319;
-    border: #000000;
-    border-width: 5px;
-    font-size: 100%;
-    padding-top: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 10px;
+    height: 120px;
+    width:auto;
+    background-color: #ffffff;
+    position:fixed;
+    
     
     
 }
 
-.headerTop{
-    height: 120px;
-}
+
 /* Dropdown button */
 .dropbtn{
     
@@ -38,8 +31,13 @@
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-    position: relative;
     display:table-row;
+    margin: 0%;
+    position: fixed;
+    background-color:rgb(255, 255, 255);
+    width:100%;
+    height:120px;
+
     
   }
   
