--- a/GlawnStyle.css
+++ b/GlawnStyle.css
@@ -3,14 +3,18 @@
     padding: 0;
 }
 
+/* header formatting*/
 .header {
     height: 120px;
     width:auto;
     background-color: #ffffff;
     position:fixed;
     
-    
-    
+}
+
+/* div that with logo and menu bar*/
+.headerTop{
+    height:120px;
 }
 
 
@@ -37,26 +41,34 @@
     background-color:rgb(255, 255, 255);
     width:100%;
     height:120px;
-
     
   }
   
   /* Dropdown Content (Hidden by Default) */
   .dropdown-content {
     display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
+    position: fixed;
+    min-width: 100%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    border-radius: 15px;
+    
+    
+    
   }
   
   /* Links inside the dropdown */
   .dropdown-content a {
-    color: black;
+    color:rgb(255, 255, 255);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    text-align: center;
+    border-radius: 10px;
+    border: 2px solid white;
+    background-color: rgba(0 ,0, 0, 0.85);
+    
   }
   
   /* Change color of dropdown links on hover */
